# fast-vision-cpp

./: .gitignore  CMake.txt  CMakeLists.txt  README.md  compose.yml
convert/dinov2/: README.md  dinov2-convert.ipynb
convert/sam/: conversion.ipynb
convert/sam/segment_anything/: predictor.py
convert/sam/segment_anything/modeling/: image_encoder.py  mask_decoder.py  prompt_encoder.py  sam.py  transformer.py
convert/sam/segment_anything/utils/: onnx.py
models/dinov2/: TensorrtExecutionProvider_cache_sm86.timing
source/computer-vision/: pca-introduction.cpp
source/machine-learning/: face-detection.cpp  image-display.cpp  people-detect.cpp  segmentation.cpp
source/onnxruntime/: ort-cuda.cpp  ort-tensorrt-cache-2.cpp  ort-tensorrt.cpp
tutorials/: pca.cpp  segmentation.cpp
tutorials/computer-vision/: convex-hull.cpp
tutorials/machine-learning/: line-segment.cpp  open-pose.cpp  segment-objects.cpp
tutorials/onnxruntime/: ort-cpu.cpp  ort-openvino.cpp  ort-tensorrt-cache-1.cpp  ort-tensorrt.cpp
